@@ -1,3 +1,6 @@
+2012-07-05  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
+        * Bugfix in PlotCalibrationHV.py
+
 2012-06-08  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
         * Bugfix in ResourceWatcher.py
 
